--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,9 @@ instance/
 # Sphinx documentation
 docs/_build/
 
+#bd
+db.sqlite3
+
 # PyBuilder
 target/
 
@@ -113,6 +116,8 @@ venv.bak/
 # Spyder project settings
 .spyderproject
 .spyproject
+
+/static
 
 # Rope project settings
 .ropeproject
